--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -56,6 +56,9 @@
     "message": "Adult Advertising",
     "description": "Tracker category name"
   },
+  "advanced": {
+    "message": "Advanced"
+  },
   "advertising": {
     "message": "Advertising",
     "description": "Tracker category name"
@@ -65,6 +68,9 @@
   },
   "allow_ghostery_in_private_windows": {
     "message": "Allow Ghostery in private windows"
+  },
+  "allow_trusted_scriptlets": {
+    "message": "Allow trusted scriptlets"
   },
   "always": {
     "message": "Always"
@@ -152,9 +158,15 @@
   "create_account": {
     "message": "Create Account"
   },
+  "create_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
+    "message": "Create your own ad-blocking rules to customize your Ghostery experience."
+  },
   "current_protection_status_for_@_0__": {
     "message": "Current protection status for $${0}:",
     "description": "Current protection status for a tracker"
+  },
+  "custom_filters": {
+    "message": "Custom filters"
   },
   "customer_interaction": {
     "message": "Customer Interaction",
@@ -289,15 +301,6 @@
   "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery Tracker & Ad Blocker is naming the trackers present on websites you visit. You are browsing the web unprotected."
   },
-  "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
-  },
-  "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery will be paused on this site for 1 day"
-  },
-  "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery will be paused on this site for 1 hour"
-  },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
   },
@@ -344,6 +347,9 @@
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "Learn more about YouTube’s challenges to ad blockers"
   },
+  "learn_more_on_supported_syntax": {
+    "message": "Learn more on supported syntax"
+  },
   "load_more": {
     "message": "Load more"
   },
@@ -356,8 +362,8 @@
   "menu": {
     "message": "Menu"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "Mind that not all listed activities are trackers, that is not all of them collect personal data."
   },
   "miscellaneous": {
     "message": "Miscellaneous",
@@ -395,12 +401,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "No websites exceptions added yet"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Number of trackers with blocked network requests."
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Number of trackers with removed cookies or fingerprints."
   },
   "observed_activities": {
     "message": "Observed activities"
@@ -555,6 +555,15 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+  },
+  "this_site_will_always_be_trusted__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
+    "message": "This site will always be trusted. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
+  },
+  "this_site_will_be_trusted_for_1_day": {
+    "message": "This site will be trusted for 1 day"
+  },
+  "this_site_will_be_trusted_for_1_hour": {
+    "message": "This site will be trusted for 1 hour"
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "To adjust privacy protection trust a site:"
